<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/PowerOntext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PowerOn"/>

     <Button
         android:id="@+id/PowerOnBn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/BnPowerOn" />
     
      <TextView
        android:id="@+id/PowerOfftext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PowerOff"/>

      <Button
          android:id="@+id/PowerOffBn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/BnPowerOff" />

</LinearLayout>